--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -19,11 +19,13 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
-        uses: actions/checkout@${{ github.sha }}
+        env:
+         SHA: ${{ github.sha }}
+        uses: actions/checkout@$SHA
  
   # This workflow contains a single job called "greet"
   greet:
-    # The type of runner that the job will run on
+    # The type of runner that the job will run on 
     runs-on: ubuntu-latest
 
     # Steps represent a sequence of tasks that will be executed as part of the job
