--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -10,7 +10,7 @@ on:
     inputs:
       name:
         # Friendly description to be shown in the UI instead of 'name'
-        description: 'Git hash'
+        description: 'Git hash - MÅ være siste i en PR!'
         required: false
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
