--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -1,6 +1,6 @@
 # This is a basic workflow that is manually triggered
 
-name: Manual workflow
+name: ⚠️ 😡 🤠 Manual workflow
 
 # Controls when the action will run. Workflow runs when manually triggered using the UI
 # or API.
@@ -8,7 +8,7 @@ on:
   workflow_dispatch:
     # Inputs the workflow accepts.
     inputs:
-      name:
+      git-hash:
         # Friendly description to be shown in the UI instead of 'name'
         description: 'Git hash - ⚠️ MÅ være siste i en PR!'
         required: false
@@ -20,7 +20,7 @@ jobs:
     steps:
       - name: Checkout
         env:
-         SHA: ${{ github.sha }}
+         SHA: ${{ git-hash == 'hello' ? github.sha : 'hello' }}
         uses: actions/checkout@master
  
   # This workflow contains a single job called "greet"
