--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -1,6 +1,6 @@
 # This is a basic workflow that is manually triggered
 
-name: ⚠️ 😡 🤠 Manual workflow
+name: 😡 🤠 Manual workflow
 
 # Controls when the action will run. Workflow runs when manually triggered using the UI
 # or API.
