--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -6,7 +6,7 @@ on:
     inputs:
       name:
         # Friendly description to be shown in the UI instead of 'name'
-        description: 'Person to greet'
+        description: 'Available images: https://eu-west-1.console.aws.amazon.com/ecr/repositories'
         # Default value if no value is explicitly provided
         default: 'World'
         # Input has to be provided for the workflow to run
